# Claude-NIM-Bridge

./: .env.example  .gitignore  README.md  README_CN.md  cc-nim.sh  claude-nim-bridge.service.example  com.claude-nim-bridge.plist.example  nvidia_nim_models.json  pyproject.toml  requirements.txt
api/: app.py  dependencies.py  models.py  routes.py
config/: settings.py
docs/: API.md  ARCHITECTURE.md  INDEX.md  REVIEW_AND_OPTIMIZATION_REPORT.md  TROUBLESHOOTING.md
providers/: __init__.py  mimo.py  model_rotator.py  model_utils.py  nvidia_mixins.py  nvidia_nim.py
providers/utils/: message_converter.py
scripts/: binance-square-kline-poster.py  openclaw-binance-square.json
tests/: test_nvidia_nim.py
